--- a/views/common/header.ejs
+++ b/views/common/header.ejs
@@ -109,7 +109,7 @@
                                     <li id="menu-item-1620" itemprop="name"
                                         class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1620">
                                         <a title="Healthcare" href="/solutions/healthcare" itemprop="url"
-                                            class="dropdown-item depth-1">卫生保健<span></span></a>
+                                            class="dropdown-item depth-1">医疗保健<span></span></a>
                                     </li>
                                     <!-- <li id="menu-item-1795" itemprop="name"
                                         class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1795">
