--- a/views/services/blockchain-development.ejs
+++ b/views/services/blockchain-development.ejs
@@ -56,7 +56,7 @@
                 <div class="bubbles">
                     <div class="bubble bubble-1 s-130">保险</div>
                     <div class="bubble bubble-2 s-90">法律</div>
-                    <div class="bubble bubble-3 s-130">卫生保健</div>
+                    <div class="bubble bubble-3 s-130">医疗保健</div>
                     <div class="bubble bubble-4 s-90">零售</div>
                     <div class="bubble bubble-5 s-120">物流运输</div>
                     <div class="bubble bubble-6 s-90">旅行</div>
