--- a/views/services/hyperledger.ejs
+++ b/views/services/hyperledger.ejs
@@ -124,7 +124,7 @@
                         <div class="business-gain-point">
                             <div class="business-gain-point-icon"></div>
                             <div class="business-gain-point-info">
-                                <h3 class="across-toggle">卫生保健</h3>
+                                <h3 class="across-toggle">医疗保健</h3>
                                 <ul class="across-sub-menu">
                                     <li>可追溯的药品和医疗供应链</li>
                                     <li>单向和纵向的患者健康记录</li>
