--- a/views/solutions/ito.ejs
+++ b/views/solutions/ito.ejs
@@ -43,7 +43,9 @@
                     <div class="h2-banner h2-banner-indents">
                         区块链使物联网安全、透明、防篡改。
                         <br>
-                        通过快速的数字事务和完整的流程跟踪，获取关于客户、资产和位置的实时数据。
+                        通过快速的数字事务和完整的流程跟踪，
+                        <br>
+                        获取关于客户、资产和位置的实时数据。
                         <br>
                     </div>
                     <a href="#contact" class="link">联系我们</a>
@@ -236,7 +238,7 @@
                         <div class="business-gain-point">
                             <div class="business-gain-point-icon"></div>
                             <div class="business-gain-point-info">
-                                <h3 class="across-toggle">卫生保健</h3>
+                                <h3 class="across-toggle">医疗保健</h3>
                                 <ul class="across-sub-menu">
                                     <li>能够实时跟踪慢性病</li>
                                     <li>确保联网医疗设备记录的私人病人数据的安全性</li>
