--- a/views/solutions/supply-chain.ejs
+++ b/views/solutions/supply-chain.ejs
@@ -39,8 +39,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-sm-12">
-                    <h1>基于区块链技术<br>的供应链解决方案</h1>
-                    <div class="h2-banner h2-banner-indents">区块链可以确保流程合理化, <br>操作透明和完全的资产控制</div>
+                    <h1>基于区块链的<br>供应链解决方案</h1>
+                    <div class="h2-banner h2-banner-indents">区块链可以确保流程合理化, <br>操作透明和完全的资产控制。</div>
                     <a href="#contact" class="link">获取报价</a>
                     <div class="bg"></div>
                 </div>
