翻译医疗健康

--- a/views/common/solutions.ejs
+++ b/views/common/solutions.ejs
@@ -41,7 +41,7 @@
                     </div>
                     <h3 class="explore-slide-title">不动产</h3>
                     <p class="explore-slide-desc">探索区块链在不动产中的优势，包括数据管理和财务处理优化。</p>
-                    <a href="/solutions/blockchain-real-estate/" class="explore-slide-link link">了解更多</a>
+                    <!-- <a href="/solutions/blockchain-real-estate/" class="explore-slide-link link">了解更多</a> -->
                 </div>
 
                 <div class="explore-slide">
@@ -50,7 +50,7 @@
                     </div>
                     <h3 class="explore-slide-title">保险</h3>
                     <p class="explore-slide-desc">改变您的部分关键流程，利用区块链在保险行业中的潜力。</p>
-                    <a href="/solutions/blockchain-insurance/" class="explore-slide-link link">了解更多</a>
+                    <!-- <a href="/solutions/blockchain-insurance/" class="explore-slide-link link">了解更多</a> -->
                 </div>
 
                 <div class="explore-slide">
@@ -59,7 +59,7 @@
                     </div>
                     <h3 class="explore-slide-title">汽车行业</h3>
                     <p class="explore-slide-desc">无论是拼车，制造，车辆跟踪，汽车互动，区块链都能为您的业务提供动力。</p>
-                    <a href="/solutions/blockchain-automotive/" class="explore-slide-link link">了解更多</a>
+                    <!-- <a href="/solutions/blockchain-automotive/" class="explore-slide-link link">了解更多</a> -->
                 </div>
 
                 <div class="explore-slide">
@@ -68,7 +68,7 @@
                     </div>
                     <h3 class="explore-slide-title">零售</h3>
                     <p class="explore-slide-desc">利用零售区块链建立消费者信任，提高供应链可管理性，防止假冒商品。</p>
-                    <a href="/solutions/blockchain-retail/" class="explore-slide-link link">了解更多</a>
+                    <!-- <a href="/solutions/blockchain-retail/" class="explore-slide-link link">了解更多</a> -->
                 </div>
 
                 <div class="explore-slide">
@@ -77,7 +77,7 @@
                     </div>
                     <h3 class="explore-slide-title">教育</h3>
                     <p class="explore-slide-desc">OpenLedger带来了一支经验丰富的区块链开发人员团队，并为教育项目创建了自定义解决方案。</p>
-                    <a href="/solutions/blockchain-education/" class="explore-slide-link link">了解更多</a>
+                    <!-- <a href="/solutions/blockchain-education/" class="explore-slide-link link">了解更多</a> -->
                 </div>
 
                 <div class="explore-slide">
@@ -86,7 +86,7 @@
                     </div>
                     <h3 class="explore-slide-title">慈善机构</h3>
                     <p class="explore-slide-desc">与捐助者，受助者和其他利益相关者建立信任，确保援助到达合适的人，并提高管理成本。</p>
-                    <a href="/solutions/blockchain-charity/" class="explore-slide-link link">了解更多</a>
+                    <!-- <a href="/solutions/blockchain-charity/" class="explore-slide-link link">了解更多</a> -->
                 </div>
 
                 <div class="explore-slide">
@@ -95,7 +95,7 @@
                     </div>
                     <h3 class="explore-slide-title">农业</h3>
                     <p class="explore-slide-desc">改善分配，为生产者和消费者建立从农场到货架的供应审核，并减少食品欺诈。</p>
-                    <a href="/solutions/blockchain-agriculture/" class="explore-slide-link link">了解更多</a>
+                    <!-- <a href="/solutions/blockchain-agriculture/" class="explore-slide-link link">了解更多</a> -->
                 </div>
 
                 <div class="explore-slide">
@@ -104,7 +104,7 @@
                     </div>
                     <h3 class="explore-slide-title">法律</h3>
                     <p class="explore-slide-desc">自动执行协议，为文档提供安全且可维护的数据库。</p>
-                    <a href="/solutions/blockchain-legal/" class="explore-slide-link link">了解更多</a>
+                    <!-- <a href="/solutions/blockchain-legal/" class="explore-slide-link link">了解更多</a> -->
                 </div>
             </div>
         </div>
