--- a/views/solutions/healthcare.ejs
+++ b/views/solutions/healthcare.ejs
@@ -52,10 +52,10 @@
     <div class="content">
         <div class="top-health">
             <div class="container">
-                <h2 class="mt-40">Top health industry issues of 2019</h2>
+                <h2 class="mt-40">2019年关于健康的热门话题</h2>
                 <div class="gor-100">
                     <div class="h4">
-                        The healthcare industry has trailed other sectors in adopting new technologies and applications.
+                        医疗保健行业在采用新技术和应用方面已经落后于其他行业。
                     </div>
                 </div>
                 <div class="row">
@@ -63,7 +63,7 @@
                         <div class="iot-gathers-massive-img-point">
                             <div class="iot-gathers-massive-img img-row-sample top-health-img01">
                             </div>
-                            <p>$408 per record — the cost of healthcare data breaches in organizations. <a
+                            <p>每条记录408美元-组织中医疗保健数据泄露的成本。<a
                                     class="teal-link"
                                     href="https://www.healthcare-informatics.com/news-item/cybersecurity/healthcare-data-breach-costs-remain-highest-408-record"
                                     target="_blank" rel="noopener">Source</a></p>
@@ -72,7 +72,7 @@
                     <div class="col-md-4">
                         <div class="iot-gathers-massive-img-point">
                             <div class="iot-gathers-massive-img img-row-sample top-health-img02"></div>
-                            <p>50% of clinical trials in the US are unreported. <br> <a class="teal-link"
+                            <p>在美国，有50％的临床试验尚未报道。<br> <a class="teal-link"
                                     href="https://www.bmj.com/content/362/bmj.k3218" target="_blank"
                                     rel="noopener">Source</a></p>
                         </div>
@@ -80,7 +80,7 @@
                     <div class="col-md-4">
                         <div class="iot-gathers-massive-img-point">
                             <div class="iot-gathers-massive-img img-row-sample top-health-img03"></div>
-                            <p>40% of healthcare data records contain errors or misleading information. <a
+                            <p>40％的医疗保健数据记录包含错误或误导性信息。<a
                                     class="teal-link"
                                     href="http://rethinkingclinicaltrials.org/resources/acquiring-and-using-electronic-health-record-data/"
                                     target="_blank" rel="noopener">Source</a></p>
@@ -94,25 +94,25 @@
                 <div class="row">
                     <div class="col-md-4">
                         <h4 class="h4">
-                            <p>Current challenges within modern healthcare industry are:</p>
+                            <p>现代医疗保健行业当前面临的挑战是：</p>
                         </h4>
                     </div>
                     <div class="col-md-4">
                         <ul>
-                            <li>Drug traceability</li>
-                            <li>Poor healthcare data management</li>
-                            <li>Data security in clinical trials</li>
-                            <li>Medical device tracking</li>
-                            <li>Patient records</li>
+                            <li>药品的可追溯性</li>
+                            <li>医疗数据管理不善</li>
+                            <li>临床试验中的数据安全</li>
+                            <li>医疗设备跟踪</li>
+                            <li>病历</li>
                         </ul>
                     </div>
                     <div class="col-md-4">
                         <ul>
-                            <li>Micropayments</li>
-                            <li>High cost of new innovations</li>
-                            <li>Lack of access to advanced treatments</li>
+                            <li>小额支付</li>
+                            <li>新创新成本高</li>
+                            <li>缺乏获得高级治疗的机会</li>
                             <li>Errors in prognosis</li>
-                            <li>Overdiagnosis</li>
+                            <li>过度诊断</li>
                         </ul>
                     </div>
                 </div>
@@ -120,12 +120,12 @@
         </div>
         <div class="healthcare-opportunities-applications">
             <div class="container">
-                <h2 class="mt-40">Blockchain and healthcare: opportunities and applications</h2>
+                <h2 class="mt-40">区块链与医疗保健：机遇与应用</h2>
                 <div class="row">
                     <div class="col-md-4">
                         <div class="iot-gathers-massive-img-point">
                             <div class="iot-gathers-massive-img img-row-sample healthcare-applications-img01"></div>
-                            <p><strong>Already use blockchain:</strong> Humana, MultiPlan, Optum, Quest Diagnostics,
+                            <p><strong>已使用区块链：</strong> Humana, MultiPlan, Optum, Quest Diagnostics,
                                 UnitedHealthcare, CVS Health-Aetna and Ascension. <a class="teal-link"
                                     href="https://www.synaptichealthalliance.com/our-founders" target="_blank"
                                     rel="noopener">Source</a></p>
@@ -134,7 +134,7 @@
                     <div class="col-md-4">
                         <div class="iot-gathers-massive-img-point">
                             <div class="iot-gathers-massive-img img-row-sample healthcare-applications-img02"></div>
-                            <p>63% of health care organizations will invest more than $1 million in 2019. <a
+                            <p>63％的医疗保健组织将在2019年投资超过100万美元<a
                                     class="teal-link"
                                     href="https://www2.deloitte.com/content/dam/Deloitte/cz/Documents/financial-services/cz-2018-deloitte-global-blockchain-survey.pdf"
                                     target="_blank" rel="noopener">Source</a></p>
@@ -143,7 +143,7 @@
                     <div class="col-md-4">
                         <div class="iot-gathers-massive-img-point">
                             <div class="iot-gathers-massive-img img-row-sample healthcare-applications-img03"></div>
-                            <p>33% of life sciences organizations will invest between $5–10 million in 2019. <a
+                            <p>33％的生命科学组织将在2019年投资5至1000万美元。<a
                                     class="teal-link"
                                     href="https://www2.deloitte.com/content/dam/Deloitte/cz/Documents/financial-services/cz-2018-deloitte-global-blockchain-survey.pdf"
                                     target="_blank" rel="noopener">Source</a></p>
@@ -159,15 +159,14 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="h4">
-                                <p>Blockchain technology in healthcare delivers improved data exchange integrity,
-                                    consent management, real-time data sharing, record keeping and more accurate data.
+                                <p>
+                                    医疗保健中的区块链技术可提供改进的数据交换完整性，同意管理，实时数据共享，记录保存和更准确的数据。
                                 </p>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="h4">
-                                <p>OpenLedger's experienced team understands the power of blockchain technology to
-                                    transform healthcare through uses cases like these:</p>
+                                <p>OpenLedger's 经验丰富的团队了解区块链技术通过以下用例来转变医疗保健的力量：</p>
                             </div>
                         </div>
                     </div>
@@ -183,7 +182,7 @@
                     <div class="manufacturer-points clinical-points">
                         <div class="manufacturer-point clinical-point">
                             <div class="manufacturer-point-toggle clinical-point-toggle clinical-point-toggle01">
-                                <span class="manufacturer-point-title">Patient, Clinical Data</span>
+                                <span class="manufacturer-point-title">患者，临床数据</span>
                             </div>
                             <div class="manufacturer-point-content">
                                 <img class="accordion-scheme accordion-scheme-01"
@@ -191,20 +190,20 @@
                                     alt="Patient, Clinical Data">
                             </div>
                         </div>
-                        <div class="clinical-data-teal">Encryption & Digital Signature</div>
+                        <div class="clinical-data-teal">加密和数字签名</div>
                         <div class="manufacturer-point clinical-point">
                             <div class="manufacturer-point-toggle clinical-point-toggle clinical-point-toggle02">
-                                <span class="manufacturer-point-title">Blockchain</span>
+                                <span class="manufacturer-point-title">区块链</span>
                             </div>
                             <div class="manufacturer-point-content">
                                 <img class="accordion-scheme accordion-scheme-02"
                                     src="/images/Solutions/Healthcare/Accordion-schemes/02.svg" alt="Blockchain">
                             </div>
                         </div>
-                        <div class="clinical-data-teal">Decryption & Authenticate Digital Sign</div>
+                        <div class="clinical-data-teal">解密和认证数字签名</div>
                         <div class="manufacturer-point clinical-point">
                             <div class="manufacturer-point-toggle clinical-point-toggle clinical-point-toggle03">
-                                <span class="manufacturer-point-title">Healthcare Parties</span>
+                                <span class="manufacturer-point-title">医疗团体</span>
                             </div>
                             <div class="manufacturer-point-content">
                                 <img class="accordion-scheme accordion-scheme-03"
@@ -224,13 +223,13 @@
 
                         <div class="col-md-4">
                             <div class="point point-accordion">
-                                <h3>Clinical trials</h3>
+                                <h3>临床试验</h3>
                                 <div class="text">
-                                    <p>Blockchain technology fosters transparency and trust between stakeholders,
-                                        reduces audit costs, and improves pharmaceutical supply chain management.</p>
-                                    <p>It includes participants (manufacturers, packagers, distributors, dispensers, and
-                                        regulators) and details like manufacturing locations, shipping dates, batch
-                                        numbers, expiry dates, storage temperature, and unique identification numbers.
+                                    <p>
+                                        区块链技术提高了利益相关者之间的透明度和信任度，降低了审计成本，并改善了药品供应链管理。
+                                    </p>
+                                    <p>
+                                        它包括参与者（制造商，包装商，分销商，配送商和监管机构）以及详细信息，例如制造地点，装运日期，批号，有效期，储存温度和唯一标识号。
                                     </p>
                                 </div>
                             </div>
@@ -238,34 +237,35 @@
 
                         <div class="col-md-4">
                             <div class="point point-accordion">
-                                <h3>Healthcare data sharing</h3>
+                                <h3>医疗数据共享</h3>
                                 <div class="text">
-                                    <p>Blockchain technology preserves the integrity of data exchanges between
-                                        healthcare providers, patients and third parties like insurers, delivering
-                                        real-time data sharing, global standards, and regulatory compliance.</p>
-                                    <p>It also empowers individuals to be accountable for their healthcare, reduces
-                                        costs and makes the healthcare industry more efficient.</p>
+                                    <p>
+                                        区块链技术可保持医疗保健提供者，患者和保险公司等第三方之间的数据交换的完整性，提供实时数据共享，全球标准和法规遵从性。
+                                    </p>
+                                    <p>
+                                        它还使个人能够对其医疗保健负责，降低成本并提高医疗保健行业的效率。
+                                    </p>
                                 </div>
                             </div>
                         </div>
 
                         <div class="col-md-4">
                             <div class="point point-accordion">
-                                <h3>EHRs and EMRs</h3>
+                                <h3>电子病历和电子病历</h3>
                                 <div class="text">
-                                    <p>Blockchain technology for health records management allows patients to control
-                                        their own healthcare data, managing access by doctors, hospitals, healthcare
-                                        providers and laboratories to past and present ailments, treatments, and family
-                                        history of medical problems.</p>
-                                    <p>A single, securely-stored version cannot be accessed or amended without
-                                        authorization.</p>
+                                    <p>
+                                        用于健康记录管理的区块链技术使患者可以控制自己的医疗数据，管理医生，医院，医疗提供者和实验室对过去和现在的疾病，治疗方法以及医疗问题家族史的访问权限。
+                                    </p>
+                                    <p>
+                                        未经授权，不能访问或修改单个安全存储的版本。
+                                    </p>
                                 </div>
                             </div>
                         </div>
 
                         <div class="col-md-4">
                             <div class="point point-accordion">
-                                <h3>Medical device tracking</h3>
+                                <h3>医疗设备跟踪</h3>
                                 <div class="text">
                                     <p>Blockchain allows healthcare device tracking across device lifecycle from
                                         manufacture to decommission.</p>
