流程图翻译

--- a/views/solutions/healthcare.ejs
+++ b/views/solutions/healthcare.ejs
@@ -63,8 +63,7 @@
                         <div class="iot-gathers-massive-img-point">
                             <div class="iot-gathers-massive-img img-row-sample top-health-img01">
                             </div>
-                            <p>每条记录408美元-组织中医疗保健数据泄露的成本。<a
-                                    class="teal-link"
+                            <p>每条记录408美元-组织中医疗保健数据泄露的成本。<a class="teal-link"
                                     href="https://www.healthcare-informatics.com/news-item/cybersecurity/healthcare-data-breach-costs-remain-highest-408-record"
                                     target="_blank" rel="noopener">Source</a></p>
                         </div>
@@ -80,8 +79,7 @@
                     <div class="col-md-4">
                         <div class="iot-gathers-massive-img-point">
                             <div class="iot-gathers-massive-img img-row-sample top-health-img03"></div>
-                            <p>40％的医疗保健数据记录包含错误或误导性信息。<a
-                                    class="teal-link"
+                            <p>40％的医疗保健数据记录包含错误或误导性信息。<a class="teal-link"
                                     href="http://rethinkingclinicaltrials.org/resources/acquiring-and-using-electronic-health-record-data/"
                                     target="_blank" rel="noopener">Source</a></p>
                         </div>
@@ -134,8 +132,7 @@
                     <div class="col-md-4">
                         <div class="iot-gathers-massive-img-point">
                             <div class="iot-gathers-massive-img img-row-sample healthcare-applications-img02"></div>
-                            <p>63％的医疗保健组织将在2019年投资超过100万美元<a
-                                    class="teal-link"
+                            <p>63％的医疗保健组织将在2019年投资超过100万美元<a class="teal-link"
                                     href="https://www2.deloitte.com/content/dam/Deloitte/cz/Documents/financial-services/cz-2018-deloitte-global-blockchain-survey.pdf"
                                     target="_blank" rel="noopener">Source</a></p>
                         </div>
@@ -143,8 +140,7 @@
                     <div class="col-md-4">
                         <div class="iot-gathers-massive-img-point">
                             <div class="iot-gathers-massive-img img-row-sample healthcare-applications-img03"></div>
-                            <p>33％的生命科学组织将在2019年投资5至1000万美元。<a
-                                    class="teal-link"
+                            <p>33％的生命科学组织将在2019年投资5至1000万美元。<a class="teal-link"
                                     href="https://www2.deloitte.com/content/dam/Deloitte/cz/Documents/financial-services/cz-2018-deloitte-global-blockchain-survey.pdf"
                                     target="_blank" rel="noopener">Source</a></p>
                         </div>
@@ -267,37 +263,28 @@
                             <div class="point point-accordion">
                                 <h3>医疗设备跟踪</h3>
                                 <div class="text">
-                                    <p>Blockchain allows healthcare device tracking across device lifecycle from
-                                        manufacture to decommission.</p>
-                                    <p>At every stage, know where the device is, a full location history and all the
-                                        manufacturer, reseller, serial number, repair history and other data associated
-                                        with the device.</p>
+                                    <p>区块链可让医疗设备跟踪从制造到退役的整个设备生命周期。</p>
+                                    <p>在每个阶段，都要知道设备的位置，完整的位置历史记录以及所有制造商，经销商，序列号，维修历史记录以及与该设备相关的其他数据。</p>
                                 </div>
                             </div>
                         </div>
 
                         <div class="col-md-4">
                             <div class="point point-accordion">
-                                <h3>Micropayments</h3>
+                                <h3>小额支付</h3>
                                 <div class="text">
-                                    <p>Blockchain in healthcare is used to facilitate micropayments without a third
-                                        party, offering a direct, trackable flow of transactions.</p>
-                                    <p>There are additional applications in rewards program development for patients who
-                                        attend appointments on schedule, contribute their data to clinical trials and
-                                        research and follow medical care plans.</p>
+                                    <p>医疗保健中的区块链用于在没有第三方的情况下促进小额支付，从而提供直接，可追踪的交易流。</p>
+                                    <p>对于按时参加约会，将其数据用于临床试验和研究并遵循医疗计划的患者，奖励计划开发中还有其他应用程序。</p>
                                 </div>
                             </div>
                         </div>
 
                         <div class="col-md-4">
                             <div class="point point-accordion">
-                                <h3>Accelerating R&D</h3>
+                                <h3>加快研发</h3>
                                 <div class="text">
-                                    <p>Blockchain technology streamlines and accelerates R&amp;D in healthcare, boosting
-                                        innovation, lowering costs at pharma and medtech companies, and quickly
-                                        processing R&amp;D data gathered from research labs from around the world.</p>
-                                    <p>Leverage transparency, auditability and accountability to benefit from the skills
-                                        and knowledge of medical practitioners and researchers around the world.</p>
+                                    <p>区块链技术简化并加速了医疗保健领域的研发，促进了创新，降低了制药和医疗技术公司的成本，并迅速处理了来自全球研究实验室的研发数据。</p>
+                                    <p>利用透明性，可审计性和问责制，受益于世界各地的医生和研究人员的技能和知识。</p>
                                 </div>
                             </div>
                         </div>
@@ -307,13 +294,10 @@
                     <div class="row">
                         <div class="col-md-4">
                             <div class="point point-accordion">
-                                <h3>Drug traceability</h3>
+                                <h3>药品的可追溯性</h3>
                                 <div class="text">
-                                    <p>Blockchain application helps overcome the increasing risk of counterfeit or
-                                        unapproved drugs.</p>
-                                    <p>Transactions are timestamped, drugs are registered by smart contract, pill
-                                        containers are identified, and a complete path of origin, with integrated GPS
-                                        and chain-of-custody logging, ensures reliable drug delivery.</p>
+                                    <p>区块链应用有助于克服假冒或未经批准的药物日益增加的风险。</p>
+                                    <p>带有时间戳的交易，通过智能合约对药物进行注册，确定药丸容器以及完整的来源路径（带有集成的GPS和产销监管链记录）可确保可靠的药物递送。</p>
                                     <img class="stretch-img drug-trace-img drug-trace-768"
                                         src="/images/Solutions/Healthcare/drug-traceability-sheme-768.svg"
                                         alt="Blockchain technology in healthcare">
@@ -342,7 +326,7 @@
         </div>
         <div class="automotive-solutions">
             <div class="container">
-                <h3>Healthcare companies that utilize blockchain:</h3>
+                <h3>利用区块链的医疗保健公司：</h3>
                 <div class="companies-icons companies-icons4">
                     <img src="/images/companies/healthcare1.svg">
                     <img src="/images/companies/healthcare2.svg">
@@ -355,15 +339,13 @@
 
         <div class="medical-services">
             <div class="container">
-                <h2>How blockchain in healthcare is advancing the quality of medical services</h2>
+                <h2>医疗保健中的区块链如何提高医疗服务质量</h2>
                 <div class="gor-100">
                     <div class="row">
                         <div class="col-md-12">
                             <div class="h4">
-                                <p>Blockchain technology has demonstrated its ability to reshape business processes
-                                    across industries, and in healthcare it can address multiple modern challenges.</p>
-                                <p>Explore the most promising benefits of blockchain application in healthcare that will
-                                    redefine health data and shape the future of the healthcare industry:</p>
+                                <p>区块链技术已展示出重塑跨行业业务流程的能力，在医疗保健领域，它可以应对多种现代挑战。</p>
+                                <p>探索医疗保健中区块链应用的最有希望的好处，它将重新定义健康数据并塑造医疗保健行业的未来：</p>
                             </div>
                         </div>
                     </div>
@@ -372,12 +354,10 @@
 
                     <div class="col-md-6">
                         <div class="tile tile-collapse">
-                            <h3>Healthcare excellence</h3>
+                            <h3>卓越的医疗保健</h3>
                             <div class="text">
-                                <p>Blockchain technology in the healthcare industry enables a patient-centric approach
-                                    to data management and retention.</p>
-                                <p>Blockchain-based solutions for EMRs and EHRs facilitate innovation, optimize the
-                                    efficiency of healthcare organizations and deliver higher service standards.</p>
+                                <p>医疗保健行业中的区块链技术实现了以患者为中心的数据管理和保留方法。</p>
+                                <p>针对EMR和EHR的基于区块链的解决方案可促进创新，优化医疗机构的效率并提供更高的服务标准。</p>
                                 <div class="fade-out"></div>
                             </div>
                         </div>
@@ -385,13 +365,10 @@
 
                     <div class="col-md-6">
                         <div class="tile tile-collapse">
-                            <h3>Improved information security</h3>
+                            <h3>改善信息安全性</h3>
                             <div class="text">
-                                <p>Better information security means better patient safety. Blockchain technology
-                                    guarantees data provenance in healthcare and allows enhanced trust without the need
-                                    for third parties.</p>
-                                <p>A high degree of privacy and safety is obtained by authenticating and securely
-                                    storing data.</p>
+                                <p>更好的信息安全性意味着更好的患者安全。 区块链技术可确保医疗保健中的数据来源，无需第三方即可增强信任。</p>
+                                <p>通过验证和安全存储数据可获得高度的隐私和安全性。</p>
                                 <div class="fade-out"></div>
                             </div>
                         </div>
@@ -399,13 +376,10 @@
 
                     <div class="col-md-6">
                         <div class="tile tile-collapse">
-                            <h3>Interoperability</h3>
+                            <h3>互通性</h3>
                             <div class="text">
-                                <p>Blockchain technology prevents unauthorized information access and improves patient
-                                    healthcare data management.</p>
-                                <p>The improved data sharing process is achieved through smooth coordination between
-                                    multiple care providers, streamlined verification processes and automated claims
-                                    adjudication based on immutable, complete records.</p>
+                                <p>区块链技术可防止未经授权的信息访问并改善患者医疗数据的管理。</p>
+                                <p>改进的数据共享过程是通过多个护理提供者之间的顺畅协调，简化的验证过程以及基于不变的完整记录的自动索赔裁定来实现的。</p>
                                 <div class="fade-out"></div>
                             </div>
                         </div>
@@ -413,14 +387,10 @@
 
                     <div class="col-md-6">
                         <div class="tile tile-collapse">
-                            <h3>Data integrity</h3>
+                            <h3>数据的完整性</h3>
                             <div class="text">
-                                <p>When EMRs and EHRs use blockchain, organizations benefit from smart health data
-                                    manipulation.</p>
-                                <p>Editing or falsifying medical data becomes impossible, and health information,
-                                    medical test dates and results, billing and payments are immutably and automatically
-                                    recorded, preventing fraudulent activity and saving money currently spent on manual
-                                    data tracking.</p>
+                                <p>当EMR和EHR使用区块链时，组织将从智能健康数据操纵中受益。</p>
+                                <p>不可能编辑或篡改医学数据，并且健康信息，医学检验日期和结果，账单和付款将一成不变并自动记录，从而防止欺诈活动并节省当前在手动数据跟踪上花费的资金。</p>
                                 <div class="fade-out"></div>
                             </div>
                         </div>
